sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:45: error: '=' expected but '(' found.
def index2pos(index:Int):Array[Int](2) = {
                                   ^SelectBaseball:51: error: illegal start of simple expression
def pos2index(pos:Array[Int](2)):Int = {
^SelectBaseball:51: error: ')' expected but '(' found.
def pos2index(pos:Array[Int](2)):Int = {
                            ^SelectBaseball:51: error: '=' expected but ')' found.
def pos2index(pos:Array[Int](2)):Int = {
                               ^SelectBaseball:183: error: illegal start of simple expression
}
^